2009-06-17  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/mock/mtx.pl: new "mock" mtx for testing
	* installcheck/mock_mtx.pl: test the test mtx
	* installcheck/Installcheck/Mock.pm: support for using mtx
	* installcheck/Installcheck/Run.pm: don't apply sbindir if there
	  are any slashes in the app name
	* installcheck/Makefile.am: new files

2009-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Fix for bump from level 9 to 10.

2009-06-13  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Changer_compat.pl: add test case for concurrent
	  calls to chg-compat's info() (tests the fix committed 2009-06-01)

2009-06-12  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/flags.m4: fix --enable-werror macro

2009-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Print how tape_length is computed.

2009-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Fix for configured with CLIENT_LOGIN=root
	* man/xml-source/amanda-client.conf.5.xml: Typo.
	* man/xml-source/amanda.conf.5.xml: Add ssh_keys.

2009-06-11  Nikolas Coukouma <atrus@zmanda.com>
	* amar-src/amar.c, amar-src/amar.h, amar-src/amarchiver.c,
	  common-src/glib-util.c, common-src/glib-util.h, common-src/queueing.c,
	  common-src/queueing.h, common-src/semaphore-test.c,
	  common-src/semaphore.c, common-src/semaphore.h,
	  config/automake/scripts.am, config/automake/vars.am,
	  device-src/device-queueing.c, device-src/device-queueing.h,
	  device-src/device.c, device-src/device.h, device-src/null-device.c,
	  device-src/property.c, device-src/property.h,
	  device-src/rait-device.c, device-src/s3-device.c,
	  device-src/s3-util.c, device-src/s3-util.h, device-src/s3.c,
	  device-src/s3.h, device-src/tape-aix.c, device-src/tape-device.c,
	  device-src/tape-device.h, device-src/tape-ops.h,
	  device-src/tape-posix.c, device-src/tape-uware.c,
	  device-src/tape-xenix.c, device-src/vfs-device.c,